[gd_scene load_steps=16 format=3 uid="uid://cl2y8w4nga0m4"]

[ext_resource type="Script" path="res://Entities/entities_script/player.gd" id="1_jdr8l"]
[ext_resource type="Texture2D" uid="uid://dkusewka3ky1n" path="res://Sprites/Player_metroid.png" id="1_kr4b0"]
[ext_resource type="Shader" path="res://Shaders/hurt.gdshader" id="2_vds5w"]
[ext_resource type="Texture2D" uid="uid://bk3dq3uriy6dm" path="res://Sprites/gun_1.png" id="3_rvf6b"]
[ext_resource type="Script" path="res://Entities/entities_script/camera.gd" id="4_1yqnh"]
[ext_resource type="PackedScene" uid="uid://vauo2uuorfuo" path="res://UI/Scenes/mouse_icon.tscn" id="4_gxmvm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v0vie"]
radius = 6.0
height = 26.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ngbeb"]
shader = ExtResource("2_vds5w")
shader_parameter/flash_color = Color(0.858824, 0.8, 0.788235, 0.443137)
shader_parameter/flash_modifier = 0.0

[sub_resource type="Animation" id="Animation_hsuds"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/hitbox_collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_y10s3"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23, 24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_x2kj7"]
resource_name = "dead"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/hitbox_collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"reset_states"
}]
}

[sub_resource type="Animation" id="Animation_do057"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/hitbox_collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_7gem2"]
resource_name = "move"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/hitbox_collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iab7b"]
_data = {
"RESET": SubResource("Animation_hsuds"),
"attack": SubResource("Animation_y10s3"),
"dead": SubResource("Animation_x2kj7"),
"idle": SubResource("Animation_do057"),
"move": SubResource("Animation_7gem2")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xfsk3"]
radius = 6.0
height = 22.0

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 31
script = ExtResource("1_jdr8l")
speed = 100

[node name="player_collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_v0vie")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
material = SubResource("ShaderMaterial_ngbeb")
position = Vector2(0, -10)
texture = ExtResource("1_kr4b0")
flip_h = true
hframes = 8
vframes = 7

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iab7b")
}
autoplay = "idle"

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(0, -10)
collision_mask = 32

[node name="hitbox_collider" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 11)
shape = SubResource("CapsuleShape2D_xfsk3")
disabled = true
debug_color = Color(0.811765, 0.368627, 0.486275, 0.419608)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -10)
zoom = Vector2(3.8, 3.8)
script = ExtResource("4_1yqnh")

[node name="camera_shake" type="Timer" parent="Camera2D"]
autostart = true

[node name="gun_handler" type="Node2D" parent="."]
position = Vector2(3, 1)
scale = Vector2(0.9, 0.9)

[node name="gun_sprite" type="Sprite2D" parent="gun_handler"]
position = Vector2(6.88889, 1.11111)
texture = ExtResource("3_rvf6b")

[node name="bullet_point" type="Marker2D" parent="gun_handler"]
position = Vector2(13.3333, 0)

[node name="mouse_icon" parent="." instance=ExtResource("4_gxmvm")]

[node name="trail_timer" type="Timer" parent="."]
autostart = true

[node name="melee_reset" type="Timer" parent="."]

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Camera2D/camera_shake" to="Camera2D" method="_on_camera_shake_timeout"]
[connection signal="timeout" from="trail_timer" to="." method="_on_trail_timer_timeout"]
[connection signal="timeout" from="melee_reset" to="." method="_on_melee_reset_timeout"]
